# Algebla

./: CMakeLists.txt  README.md  algeblah.h  config.h  defaultformatter.h  defaulthelper.h  driver.cpp  driver.h  dummytransformer.h  dummyvisitor.h  findvariabetransformer.h  findvariabevisitor.h  gnuplot.h  main.cpp  mpfrhelper.cpp  mpfrhelper.h  options.cpp  options.h  parser.cpp  parser.h  parser.yy  rearragetransformer.h  rearrangetransformer.h  removenooptransformer.h  removenoopvisitor.h  replacetransformer.h  replacevisitor.h  reversetransformer.h  scanner.cpp  scanner.ll  solvertransformer.h  solvervisitor.h  stdhelper.cpp  stdhelper.h  usefulfraction.h
mathop/: algeblah.h  constants.h  containercounter.h  counter.h  countvariabletransformer.h  defaultformatter.h  dummycounter.h  dummytransformer.h  expandtransformer.h  factory.h  finder.h  findexternaltransformer.h  findnamedsymboltransformer.h  findnamedvaluetransformer.h  findvariabetransformer.h  findvariablecounter.h  mathfunctional.h  mpfrhelper.cpp  mpfrhelper.h  namedvaluecounter.h  rearrangemultitransformer.h  rearrangetmultiransformer.h  rearrangetransformer.h  removenooptransformer.h  replacetransformer.h  reversemultitransformer.h  reversetransformer.h  stdhelper.cpp  stdhelper.h  texformatter.h  variablecounter.h  visitor.h
scripts/: README  kittytex
